src/main/java/trex/ruleparser/TESLAParser.java
package trex.ruleparser;// Generated from TESLA.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TESLAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, ASSIGN=17, 
		DEFINE=18, FROM=19, WHERE=20, CONSUMING=21, VALTYPE=22, SEL_POLICY=23, 
		AGGR_FUN=24, OPERATOR=25, LOGICAL_OPERATOR=26, BINOP_MUL=27, BINOP_ADD=28, 
		SPATIAL_OP=29, INT_VAL=30, FLOAT_VAL=31, BOOL_VAL=32, STRING_VAL=33, GEOMETRY_VAL=34, 
		EVT_NAME=35, ATTR_NAME=36, PARAM_NAME=37, WS=38;
	public static final int
		RULE_static_reference = 0, RULE_packet_reference = 1, RULE_param_mapping = 2, 
		RULE_param_atom = 3, RULE_agg_one_reference = 4, RULE_agg_between = 5, 
		RULE_aggregate_atom = 6, RULE_expr = 7, RULE_attr_declaration = 8, RULE_staticAttr_definition = 9, 
		RULE_attr_definition = 10, RULE_attr_constraint = 11, RULE_attr_parameter = 12, 
		RULE_predicate = 13, RULE_event_alias = 14, RULE_terminator = 15, RULE_positive_predicate = 16, 
		RULE_neg_one_reference = 17, RULE_neg_between = 18, RULE_negative_predicate = 19, 
		RULE_pattern_predicate = 20, RULE_event_declaration = 21, RULE_event_declarations = 22, 
		RULE_ce_definition = 23, RULE_pattern = 24, RULE_definitions = 25, RULE_consuming = 26, 
		RULE_ending_rule = 27, RULE_trex_rule = 28, RULE_simple_event = 29, RULE_complex_event = 30, 
		RULE_simple_event_definition = 31, RULE_complex_event_definition = 32;
	public static final String[] ruleNames = {
		"static_reference", "packet_reference", "param_mapping", "param_atom", 
		"agg_one_reference", "agg_between", "aggregate_atom", "expr", "attr_declaration", 
		"staticAttr_definition", "attr_definition", "attr_constraint", "attr_parameter", 
		"predicate", "event_alias", "terminator", "positive_predicate", "neg_one_reference", 
		"neg_between", "negative_predicate", "pattern_predicate", "event_declaration", 
		"event_declarations", "ce_definition", "pattern", "definitions", "consuming", 
		"ending_rule", "trex_rule", "simple_event", "complex_event", "simple_event_definition", 
		"complex_event_definition"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'=>'", "'within'", "'from'", "'between'", "'and'", "'('", 
		"','", "')'", "':'", "':='", "'['", "']'", "'as'", "'not'", "';'", "'Assign'", 
		"'Define'", "'From'", "'Where'", "'Consuming'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "ASSIGN", "DEFINE", "FROM", "WHERE", "CONSUMING", 
		"VALTYPE", "SEL_POLICY", "AGGR_FUN", "OPERATOR", "LOGICAL_OPERATOR", "BINOP_MUL", 
		"BINOP_ADD", "SPATIAL_OP", "INT_VAL", "FLOAT_VAL", "BOOL_VAL", "STRING_VAL", 
		"GEOMETRY_VAL", "EVT_NAME", "ATTR_NAME", "PARAM_NAME", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TESLA.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	StringBuilder buf = new StringBuilder(); // can't make locals in lexer rules

	public TESLAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Static_referenceContext extends ParserRuleContext {
		public TerminalNode INT_VAL() { return getToken(TESLAParser.INT_VAL, 0); }
		public TerminalNode FLOAT_VAL() { return getToken(TESLAParser.FLOAT_VAL, 0); }
		public TerminalNode STRING_VAL() { return getToken(TESLAParser.STRING_VAL, 0); }
		public TerminalNode BOOL_VAL() { return getToken(TESLAParser.BOOL_VAL, 0); }
		public TerminalNode GEOMETRY_VAL() { return getToken(TESLAParser.GEOMETRY_VAL, 0); }
		public Static_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterStatic_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitStatic_reference(this);
		}
	}

	public final Static_referenceContext static_reference() throws RecognitionException {
		Static_referenceContext _localctx = new Static_referenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_static_reference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_VAL) | (1L << FLOAT_VAL) | (1L << BOOL_VAL) | (1L << STRING_VAL) | (1L << GEOMETRY_VAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Packet_referenceContext extends ParserRuleContext {
		public TerminalNode EVT_NAME() { return getToken(TESLAParser.EVT_NAME, 0); }
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public Packet_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packet_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterPacket_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitPacket_reference(this);
		}
	}

	public final Packet_referenceContext packet_reference() throws RecognitionException {
		Packet_referenceContext _localctx = new Packet_referenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packet_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(68);
			match(EVT_NAME);
			setState(69);
			match(T__0);
			setState(70);
			match(ATTR_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_mappingContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode PARAM_NAME() { return getToken(TESLAParser.PARAM_NAME, 0); }
		public Param_mappingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_mapping; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterParam_mapping(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitParam_mapping(this);
		}
	}

	public final Param_mappingContext param_mapping() throws RecognitionException {
		Param_mappingContext _localctx = new Param_mappingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param_mapping);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ATTR_NAME);
			setState(73);
			match(T__1);
			setState(74);
			match(PARAM_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_atomContext extends ParserRuleContext {
		public Packet_referenceContext packet_reference() {
			return getRuleContext(Packet_referenceContext.class,0);
		}
		public TerminalNode PARAM_NAME() { return getToken(TESLAParser.PARAM_NAME, 0); }
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public Param_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterParam_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitParam_atom(this);
		}
	}

	public final Param_atomContext param_atom() throws RecognitionException {
		Param_atomContext _localctx = new Param_atomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_atom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			switch (_input.LA(1)) {
			case EVT_NAME:
				{
				setState(76);
				packet_reference();
				}
				break;
			case PARAM_NAME:
				{
				setState(77);
				match(PARAM_NAME);
				}
				break;
			case INT_VAL:
			case FLOAT_VAL:
			case BOOL_VAL:
			case STRING_VAL:
			case GEOMETRY_VAL:
				{
				setState(78);
				static_reference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agg_one_referenceContext extends ParserRuleContext {
		public TerminalNode INT_VAL() { return getToken(TESLAParser.INT_VAL, 0); }
		public TerminalNode EVT_NAME() { return getToken(TESLAParser.EVT_NAME, 0); }
		public Agg_one_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agg_one_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAgg_one_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAgg_one_reference(this);
		}
	}

	public final Agg_one_referenceContext agg_one_reference() throws RecognitionException {
		Agg_one_referenceContext _localctx = new Agg_one_referenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_agg_one_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(81);
			match(T__2);
			setState(82);
			match(INT_VAL);
			setState(83);
			match(T__3);
			setState(84);
			match(EVT_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agg_betweenContext extends ParserRuleContext {
		public List<TerminalNode> EVT_NAME() { return getTokens(TESLAParser.EVT_NAME); }
		public TerminalNode EVT_NAME(int i) {
			return getToken(TESLAParser.EVT_NAME, i);
		}
		public Agg_betweenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agg_between; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAgg_between(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAgg_between(this);
		}
	}

	public final Agg_betweenContext agg_between() throws RecognitionException {
		Agg_betweenContext _localctx = new Agg_betweenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_agg_between);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			match(T__4);
			setState(87);
			match(EVT_NAME);
			setState(88);
			match(T__5);
			setState(89);
			match(EVT_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggregate_atomContext extends ParserRuleContext {
		public TerminalNode AGGR_FUN() { return getToken(TESLAParser.AGGR_FUN, 0); }
		public Packet_referenceContext packet_reference() {
			return getRuleContext(Packet_referenceContext.class,0);
		}
		public Agg_one_referenceContext agg_one_reference() {
			return getRuleContext(Agg_one_referenceContext.class,0);
		}
		public Agg_betweenContext agg_between() {
			return getRuleContext(Agg_betweenContext.class,0);
		}
		public List<Attr_parameterContext> attr_parameter() {
			return getRuleContexts(Attr_parameterContext.class);
		}
		public Attr_parameterContext attr_parameter(int i) {
			return getRuleContext(Attr_parameterContext.class,i);
		}
		public List<Attr_constraintContext> attr_constraint() {
			return getRuleContexts(Attr_constraintContext.class);
		}
		public Attr_constraintContext attr_constraint(int i) {
			return getRuleContext(Attr_constraintContext.class,i);
		}
		public Aggregate_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAggregate_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAggregate_atom(this);
		}
	}

	public final Aggregate_atomContext aggregate_atom() throws RecognitionException {
		Aggregate_atomContext _localctx = new Aggregate_atomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_aggregate_atom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(AGGR_FUN);
			setState(92);
			match(T__6);
			setState(93);
			packet_reference();
			setState(94);
			match(T__6);
			setState(109);
			_la = _input.LA(1);
			if (_la==T__11 || _la==ATTR_NAME) {
				{
				setState(97);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(95);
					attr_parameter();
					}
					break;
				case ATTR_NAME:
					{
					setState(96);
					attr_constraint();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(99);
					match(T__7);
					setState(102);
					switch (_input.LA(1)) {
					case T__11:
						{
						setState(100);
						attr_parameter();
						}
						break;
					case ATTR_NAME:
						{
						setState(101);
						attr_constraint();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(111);
			match(T__8);
			setState(112);
			match(T__8);
			setState(115);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(113);
				agg_one_reference();
				}
				break;
			case T__4:
				{
				setState(114);
				agg_between();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Param_atomContext param_atom() {
			return getRuleContext(Param_atomContext.class,0);
		}
		public Aggregate_atomContext aggregate_atom() {
			return getRuleContext(Aggregate_atomContext.class,0);
		}
		public TerminalNode BINOP_MUL() { return getToken(TESLAParser.BINOP_MUL, 0); }
		public TerminalNode BINOP_ADD() { return getToken(TESLAParser.BINOP_ADD, 0); }
		public TerminalNode SPATIAL_OP() { return getToken(TESLAParser.SPATIAL_OP, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			switch (_input.LA(1)) {
			case T__6:
				{
				setState(118);
				match(T__6);
				setState(119);
				expr(0);
				setState(120);
				match(T__8);
				}
				break;
			case AGGR_FUN:
			case INT_VAL:
			case FLOAT_VAL:
			case BOOL_VAL:
			case STRING_VAL:
			case GEOMETRY_VAL:
			case EVT_NAME:
			case PARAM_NAME:
				{
				setState(124);
				switch (_input.LA(1)) {
				case INT_VAL:
				case FLOAT_VAL:
				case BOOL_VAL:
				case STRING_VAL:
				case GEOMETRY_VAL:
				case EVT_NAME:
				case PARAM_NAME:
					{
					setState(122);
					param_atom();
					}
					break;
				case AGGR_FUN:
					{
					setState(123);
					aggregate_atom();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(137);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(128);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(129);
						match(BINOP_MUL);
						setState(130);
						expr(6);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(131);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(132);
						match(BINOP_ADD);
						setState(133);
						expr(5);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(134);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(135);
						match(SPATIAL_OP);
						setState(136);
						expr(4);
						}
						break;
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Attr_declarationContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode VALTYPE() { return getToken(TESLAParser.VALTYPE, 0); }
		public Attr_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_declaration(this);
		}
	}

	public final Attr_declarationContext attr_declaration() throws RecognitionException {
		Attr_declarationContext _localctx = new Attr_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attr_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(ATTR_NAME);
			setState(143);
			match(T__9);
			setState(144);
			match(VALTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StaticAttr_definitionContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public StaticAttr_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staticAttr_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterStaticAttr_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitStaticAttr_definition(this);
		}
	}

	public final StaticAttr_definitionContext staticAttr_definition() throws RecognitionException {
		StaticAttr_definitionContext _localctx = new StaticAttr_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_staticAttr_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(ATTR_NAME);
			setState(147);
			match(T__10);
			setState(148);
			static_reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_definitionContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Attr_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_definition(this);
		}
	}

	public final Attr_definitionContext attr_definition() throws RecognitionException {
		Attr_definitionContext _localctx = new Attr_definitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attr_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ATTR_NAME);
			setState(151);
			match(T__10);
			setState(152);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_constraintContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode OPERATOR() { return getToken(TESLAParser.OPERATOR, 0); }
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public Attr_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_constraint(this);
		}
	}

	public final Attr_constraintContext attr_constraint() throws RecognitionException {
		Attr_constraintContext _localctx = new Attr_constraintContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_attr_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(ATTR_NAME);
			setState(155);
			match(OPERATOR);
			setState(156);
			static_reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_parameterContext extends ParserRuleContext {
		public TerminalNode VALTYPE() { return getToken(TESLAParser.VALTYPE, 0); }
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode OPERATOR() { return getToken(TESLAParser.OPERATOR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Attr_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_parameter(this);
		}
	}
